--- a/public/index.html
+++ b/public/index.html
@@ -16,37 +16,38 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link
-      href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/boxicons/css/boxicons.min.css"
+      href="/assets/vendor/boxicons/css/boxicons.min.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/quill/quill.snow.css"
+      href="/assets/vendor/quill/quill.snow.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/quill/quill.bubble.css"
+      href="/assets/vendor/quill/quill.bubble.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/remixicon/remixicon.css"
+      href="/assets/vendor/remixicon/remixicon.css"
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%/assets/vendor/simple-datatables/style.css"
+      href="/assets/vendor/simple-datatables/style.css"
       rel="stylesheet"
     />
 
     <!-- Template Main CSS File -->
-    <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -62,32 +63,25 @@
     ></script>
 
     <!-- Vendor JS Files -->
-    <script src="%PUBLIC_URL%/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/chart.js/chart.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/quill/quill.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/php-email-form/validate.js"></script>
-
+    <script src="/assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/chart.js/chart.min.js"></script>
+    <script src="/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="/assets/vendor/quill/quill.min.js"></script>
+    <script src="/assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="/assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
+    
+    
     <!-- Template Main JS File -->
-    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     <title>SuperVision</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+   
+ 
   </body>
 </html>
